# Ban_project

./: Datatest.sql  README.md  schema.sql
src/: Conection.py  Home.py  Main.py  helpers.py  pyproject.toml  requirements.txt  schema.sql  sql_scripts.py
src/pages/: Agendamento.py  Animal.py  Consulta.py  Funcionario.py  Funcionarios.py  Tutor.py
