[tool.poetry]
name = "ban-project"
version = "0.1.0"
description = ""
authors = ["daemonlucas1999 <daemonlucas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.28.2"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.23"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
